@@ -56,6 +56,7 @@ Q_SIGNALS:
 
     void signalProcessStarted(const QUrl&);
     void signalProcessEnded(const QUrl&, int);
+    void signalDateTimeForUrl(const QUrl&, const QDateTime&, bool);
     void signalCancelTask();
 
 public:
