@@ -608,4 +608,5 @@ BUGFIXES:
 544 ==> 399336 - Google maps – "For development purposes only" printed on the map.
 545 ==> 399338 - Count of items in Tree Views does not match total number of items.
 546 ==> 399292 - Video file datetime not shown correctly after editing.
-547 ==> 
+547 ==> 370553 - Adjust date - not possible to update "digikam timestamp".
+548 ==> 
